Fix missing translate button on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,3 +31,10 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+@media (max-width: 996px) {
+  .navbar__item {
+    display: inline-block;
+    padding: var(--ifm-navbar-item-padding-vertical) var(--ifm-navbar-item-padding-horizontal);
+  }
+}
